@@ -1,4 +1,4 @@
-# Generated by roxygen2 (4.1.0): do not edit by hand
+# Generated by roxygen2 (4.1.1): do not edit by hand
 
 export(Admin1Choropleth)
 export(Choropleth)
@@ -18,6 +18,7 @@ export(county_choropleth_acs)
 export(county_zoom_choropleth)
 export(get_acs_data)
 export(get_acs_df)
+export(get_state_demographics)
 export(state_choropleth)
 export(state_choropleth_acs)
 export(zip_map)
