@@ -1,10 +1,10 @@
-% Generated by roxygen2 (4.1.0): do not edit by hand
+% Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/admin1.R
 \docType{data}
 \name{Admin1Choropleth}
 \alias{Admin1Choropleth}
 \title{An R6 object for creating Administration Level 1 choropleths.}
-\format{\preformatted{Class 'R6ClassGenerator' <environment: 0x103590780> 
+\format{\preformatted{Class 'R6ClassGenerator' <environment: 0x103d6faa8> 
  - attr(*, "name")= chr "Admin1Choropleth_generator"
 }}
 \usage{
