@@ -1,10 +1,10 @@
-% Generated by roxygen2 (4.1.0): do not edit by hand
+% Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/choropleth.R
 \docType{data}
 \name{Choropleth}
 \alias{Choropleth}
 \title{The base Choropleth object.}
-\format{\preformatted{Class 'R6ClassGenerator' <environment: 0x1090f2468> 
+\format{\preformatted{Class 'R6ClassGenerator' <environment: 0x103d37e38> 
  - attr(*, "name")= chr "Choropleth_generator"
 }}
 \usage{
