@@ -1,10 +1,10 @@
-% Generated by roxygen2 (4.1.0): do not edit by hand
+% Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/country.R
 \docType{data}
 \name{CountryChoropleth}
 \alias{CountryChoropleth}
 \title{An R6 object for creating country-level choropleths.}
-\format{\preformatted{Class 'R6ClassGenerator' <environment: 0x1034f8678> 
+\format{\preformatted{Class 'R6ClassGenerator' <environment: 0x103ce38d8> 
  - attr(*, "name")= chr "CountryChoropleth_generator"
 }}
 \usage{
