@@ -1,10 +1,10 @@
-% Generated by roxygen2 (4.1.0): do not edit by hand
+% Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/county.R
 \docType{data}
 \name{CountyChoropleth}
 \alias{CountyChoropleth}
 \title{Create a county-level choropleth}
-\format{\preformatted{Class 'R6ClassGenerator' <environment: 0x1034ca788> 
+\format{\preformatted{Class 'R6ClassGenerator' <environment: 0x103cbec00> 
  - attr(*, "name")= chr "CountyChoropleth_generator"
 }}
 \usage{
