@@ -1,10 +1,10 @@
-% Generated by roxygen2 (4.1.0): do not edit by hand
+% Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/county_zoom.R
 \docType{data}
 \name{CountyZoomChoropleth}
 \alias{CountyZoomChoropleth}
 \title{Create a county-level choropleth that zooms on counties, not states.}
-\format{\preformatted{Class 'R6ClassGenerator' <environment: 0x10340ad08> 
+\format{\preformatted{Class 'R6ClassGenerator' <environment: 0x103c7c2e8> 
  - attr(*, "name")= chr "CountyZoomChoropleth_generator"
 }}
 \usage{
